# pghjobs.today

./: .env.sample  .gitignore  Dockerfile  db.env.sample  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
app/common/: models.py
app/common/templates/: base.html
app/common/templates/components/: footer.html  navbar.html  search_cta.html
app/core/: settings.py  urls.py
app/jobs/: admin.py  models.py  urls.py  views.py
app/jobs/migrations/: 0001_initial.py  0002_alter_job_source.py  0002_jobsource_job_source.py  0003_job_is_active.py  0003_remove_job_company_job_expiry_date_job_organization.py
app/jobs/templates/: job_list.html
app/jobs/templates/jobs/: job_detail.html  job_list.html
app/organizations/: admin.py  models.py  urls.py  views.py
app/organizations/migrations/: 0001_initial.py  0002_organization_job_listing_url.py
app/scraper/: admin.py  models.py  tasks.py
app/scraper/migrations/: 0001_initial.py
app/staticpages/: about.html  contact.html  index.html
nginx/: nginx.conf
